B&L QA/objects/Care_Kit__c.object
<CustomObject>
    <description>To store Care Kit information</description>
    <fields>
        <fullName>Doorway_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doorway</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Care Kits (Doorway)</relationshipLabel>
        <relationshipName>Care_Kits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interval_Type_Order_Quantity__c</fullName>
        <description>For mobile view</description>
        <formula>(  Interval_Type__c &amp; &apos; - &apos;  &amp;  TEXT (Order_Quantity__c) )</formula>
        <label>Interval Type Order Quantity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interval_Type__c</fullName>
        <label>Interval Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Order_Date__c</fullName>
        <label>Last Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id_Description__c</fullName>
        <description>For mobile view</description>
        <formula>( Product__c &amp;&apos;  - &apos;&amp;  Product_Description__c )</formula>
        <label>Product Id Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_To_Account__c</fullName>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Care Kits</relationshipLabel>
        <relationshipName>Care_Kits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Care Kit</label>
    <nameField>
        <displayFormat>CK{0000000000}</displayFormat>
        <label>Care Kit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Kits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>